css added container and height html adjusted container, now wraps around everything in body js added tr to book entries fixing delete button event listener

--- a/library.css
+++ b/library.css
@@ -2,6 +2,10 @@ body {
     font-family: 'Courier New', Courier, monospace;
 }
 
+.container {
+    height: 100%;
+}
+
 table, td, th {
     border: 1px solid black;
     margin: 10px;
